[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/UI/pause_menu_page_small.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pause.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PauseMenuPageSmall" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Resume" type="Button" parent="."]
margin_left = 228.0
margin_top = 239.0
margin_right = 457.0
margin_bottom = 300.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Settings" type="Button" parent="."]
margin_left = 196.0
margin_top = 389.0
margin_right = 501.0
margin_bottom = 465.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="LeaveGame" type="Button" parent="."]
margin_left = 152.0
margin_top = 558.0
margin_right = 539.0
margin_bottom = 642.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[connection signal="button_down" from="Resume" to="." method="_on_Resume_button_down"]
[connection signal="button_down" from="Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_down" from="LeaveGame" to="." method="_on_LeaveGame_button_down"]
